@@ -208,8 +208,8 @@ class Pungi(pypungi.PungiBase):
             for filename in filelist:
                 for regex in fileres:
                     if regex.match(filename) and not os.path.exists(os.path.join(self.topdir, filename)):
-                        self.logger.info("Copying release note file %s" % filename)
-                        shutil.copy(os.path.join(dirpath, filename), os.path.join(self.topdir, filename))
+                        self.logger.info("Linking release note file %s" % filename)
+                        pypungi._link(os.path.join(dirpath, filename), os.path.join(self.topdir, filename))
                         self.common_files.append(filename)
 
         # Walk the tree for our dirs
